[package]
name = "rs-pathfinder"
version = "0.1.0"
edition = "2024"
authors = ["RustCityRS"]
description = "A BFS pathfinder & collision system"
license = "ISC"
repository = "https://github.com/RustCityRS/rs-pathfinder"
homepage = "https://github.com/RustCityRS/rs-pathfinder"
readme = "README.md"
keywords = [
    "rsmod",
    "pathfinder",
    "bfs",
    "rust",
]
categories = ["game-engines", "game-development"]
include = ["src/lib.rs", "src/**/*", "LICENSE.md", "README.md"]

[lib]
name = "rsmod"

[dependencies]
once_cell = "1.21"
rand = "0.10"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
